--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 * {
   margin: 0;
 }
@@ -9,7 +10,7 @@ body {
 
   height: 100%;
 
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Raleway', sans-serif;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -19,37 +20,127 @@ body {
 }
 
 main {
-  background: url(images/background.svg) no-repeat center/cover;
-  width: 100vw;
-  min-height: 812px;
-  height: 100vh;
+  background: url(images/Desktop.svg) no-repeat center/cover;
+  background-color: black;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
-.content {
-  max-width: 250px;
+.container {
+  display: flex;
+}
+
+.container-left {
+  width: 60%;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container-up {
+  margin-top: 3rem;
+}
+
+.container-down {
+  height: 60%;
+  width: 60%;
+
+  margin-top: 6rem;
+
+  margin-right: -5rem;
+
+  font-weight: bold;
+
+  text-align: justify;
+
+  color: var(--gray);
+}
+
+.container-right {
+  width: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card {
+  background: url(images/Mobile.svg) no-repeat center/cover;
+  width: 300px;
+  height: 500px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
   color: var(--gray);
+  border-radius: 20px;
+}
+
+.content {
+  max-width: 31.5rem;
+  max-height: 37rem;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  color: var(--gray);
+  border-radius: 20px;
+}
+
+.tirante {
+  width: 5rem;
+  margin: -9rem 7rem 0;
+  position: absolute;
+  z-index: 1;
+  align-items: center;
+  border-color: 5px solid black;
+}
+
+.tirante span {
+  border-color: 5px solid black;
+  position: relative;
+  top: -1rem;
+  left: 0;
+  align-items: center;
 }
 
 .avatar {
   width: 10rem;
-  margin: 11.5rem auto 0;
+  margin: 1rem auto 0;
   position: relative;
+  border-radius: 200px;
 }
 
 .avatar span {
   position: absolute;
-  top: -15px;
+  top: 1.5rem;
+  left: 0rem;
   z-index: 1;
+  animation: loading 20s linear infinite;
+}
+@keyframes loading {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .avatar > img {
-  width: 10rem;
-  height: 11.5rem;
+  width: 8rem;
+  height: 9.5rem;
   object-fit: cover;
-  clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+  margin-top: 2rem;
+  clip-path: polygon(
+    20% 0%,
+    80% 0%,
+    100% 20%,
+    100% 80%,
+    80% 100%,
+    20% 100%,
+    0% 80%,
+    0% 20%
+  );
+  border-radius: 200px;
 }
 
 h1 {
@@ -80,4 +171,45 @@ ul {
   display: flex;
   gap: 0.5rem;
   justify-content: center;
+}
+
+li:hover {
+  background: rgb(153, 17, 206);
+}
+
+@media (max-width: 600px) {
+  main {
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    display: grid;
+    gap: 3rem;
+  }
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .container-left {
+    gap: -5rem;
+  }
+  .container-right {
+    margin-left: 3.5rem;
+    margin-bottom: 3rem;
+  }
+
+  .container-up {
+    margin-left: 8rem;
+  }
+
+  .container-down {
+    width: 100%;
+    font-size: 1rem;
+    margin-left: 3.5rem;
+  }
+
+  .tirante {
+    display: none;
+  }
 }
